nobase_include_HEADERS = \
	aio4c.h \
	aio4c/error.h \
	aio4c/client.h \
	aio4c/reader.h \
	aio4c/buffer.h \
	aio4c/writer.h \
	aio4c/thread.h \
	aio4c/worker.h \
	aio4c/types.h \
	aio4c/stats.h \
	aio4c/connection.h \
	aio4c/server.h \
	aio4c/acceptor.h \
	aio4c/lock.h \
	aio4c/queue.h \
	aio4c/alloc.h \
	aio4c/list.h \
	aio4c/event.h \
	aio4c/condition.h \
	aio4c/address.h \
	aio4c/log.h \
	aio4c/jni.h \
	aio4c/selector.h
